* Mobile fixes * Fix for markup differencies * Fix overflow in workspace copy wizard when using mobile devices * Removed border from remove row button

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
@@ -145,6 +145,7 @@
     flex-direction: column;
     flex-grow: 1;
     flex-shrink: 1;
+    overflow: auto;
   }
 }
 
